--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
-absl-py
-ml_collections
-wandb
-torch
-gym==0.21.0
-mujoco_py
-envpool
-numpy
-stable_baselines3
-tensorflow
-tensorboard
-jax
-jaxlib
-flax
-optax
-tensorflow_probability
+absl-py >= 1.3.0
+ml-collections >= 0.1.1
+wandb >= 0.13.7
+torch >= 1.13.1
+gymnasium >= 0.27.0
+mujoco_py >= 2.1.2.14
+envpool >= 0.8.0
+numpy >= 1.23.0
+tensorflow >= 2.11.0
+tensorboard >= 2.11.0
+jax >= 0.4.1
+jaxlib >= 0.4.1
+flax >= 0.6.3
+optax >= 0.1.4
+tensorflow_probability >= 0.19.0
