--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ absl-py >= 1.3.0
 ml-collections >= 0.1.1
 wandb >= 0.13.7
 torch >= 1.13.1
-gymnasium >= 0.27.0
+gymnasium[mujoco,atari] >= 0.27.0
 mujoco_py >= 2.1.2.14
 envpool >= 0.8.0
 numpy >= 1.23.0
