--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,6 @@ tensorboard >= 2.11.0
 jax >= 0.4.1
 jaxlib >= 0.4.1
 flax >= 0.6.3
-optax >= 0.1.4
+optax >= 0.1.5
+chex >= 0.1.5
 tensorflow_probability >= 0.19.0
