--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,6 @@ tensorboard >= 2.13.0
 jax >= 0.4.14
 jaxlib >= 0.4.14
 flax >= 0.7.2
+optax <= 0.1.7
+chex <= 0.1.7
 tensorflow_probability >= 0.21.0
