Add rendering for gymnasium environments

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
     "ml-collections>=0.1.1",
     "wandb>=0.15.10",
     "torch>=2.0.1",
-    "gymnasium[mujoco,atari,accept-rom-license,other]>=0.29.1",
+    "gymnasium[mujoco,classic-control,atari,accept-rom-license,other]>=0.29.1",
     "numpy>=1.24.3",
     "tensorflow>=2.13.0",
     "tensorboard>=2.13.0"
