Initial code for custom mjx environment

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "ml-collections>=0.1.1",
     "wandb>=0.15.10",
     "gymnasium[mujoco,classic-control,atari,accept-rom-license,other]>=0.29.1",
+    "mujoco>=3.1.1",
+    "mujoco-mjx>=3.1.1",
     "numpy<=1.24.3",
     "tensorflow>=2.13.0",
     "tensorboard>=2.13.0",
