--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,8 @@ dependencies = [
     "mujoco>=3.1.1",
     "mujoco-mjx>=3.1.1",
     "numpy<=1.24.3",
-    "tensorflow>=2.13.0",
-    "tensorboard>=2.13.0",
+    "tensorflow<=2.13.0",
+    "tensorboard<=2.13.0",
     "jax[cpu]>=0.4.23",
     "flax>=0.7.5",
     "optax<=0.1.7",
