--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,10 +19,10 @@ dependencies = [
     "numpy<=1.24.3",
     "tensorflow<=2.13.0",
     "tensorboard<=2.13.0",
-    "jax[cpu]>=0.4.23",
-    "flax>=0.7.5",
-    "optax<=0.1.7",
-    "chex<=0.1.7",
+    "jax[cpu]>=0.4.24",
+    "flax>=0.8.1",
+    "optax>=0.1.9",
+    "chex>=0.1.85",
     "tensorflow_probability>=0.21.0"
 ]
 
