--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,18 +12,18 @@ readme = "README.md"
 dependencies = [
     "absl-py>=1.4.0",
     "ml-collections>=0.1.1",
-    "wandb>=0.15.10",
+    "wandb>=0.16.4",
     "gymnasium[mujoco,classic-control,atari,accept-rom-license,other]>=0.29.1",
     "mujoco>=3.1.1",
     "mujoco-mjx>=3.1.1",
     "numpy<=1.24.3",
-    "tensorflow<=2.13.0",
-    "tensorboard<=2.13.0",
+    "tensorflow_cpu<=2.15.1",
+    "tensorboard<=2.15.2",
     "jax[cpu]>=0.4.25",
     "flax>=0.8.1",
     "optax>=0.1.9",
     "chex>=0.1.85",
-    "tensorflow_probability>=0.21.0"
+    "tensorflow_probability>=0.23.0"
 ]
 
 [project.optional-dependencies]
