--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "tensorboard<=2.15.2",
     "jax[cpu]>=0.4.25",
     "flax>=0.8.1",
+    "orbax_checkpoint">=0.5.3
     "optax>=0.1.9",
     "chex>=0.1.85",
     "tensorflow_probability>=0.23.0"
