--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "mujoco>=3.1.3",
     "mujoco-mjx>=3.1.3",
     "numpy<=1.24.3",
-    "tensorflow_cpu<=2.15.1",
+    "tensorflow<=2.15.1",
     "tensorboard<=2.15.2",
     "jax[cpu]>=0.4.25",
     "flax>=0.8.1",
