--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ all = [
 repository = "https://github.com/nico-bohlinger/rl-x"
 
 [tool.setuptools.dynamic]
-readme = {file = "README.md", content_type = "text/markdown"}
+readme = {file = "README.md", content-type = "text/markdown"}
 
 [tool.setuptools.packages.find]
 include = ["rl_x"]
