--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,16 +12,16 @@ readme = "README.md"
 dependencies = [
     "absl-py>=2.1.0",
     "ml-collections>=0.1.1",
-    "wandb>=0.17.5",
+    "wandb>=0.17.8",
     "gymnasium[mujoco,classic-control,atari,accept-rom-license,other]>=0.29.1",
-    "mujoco>=3.2.0",
-    "mujoco-mjx>=3.2.0",
+    "mujoco>=3.2.2",
+    "mujoco-mjx>=3.2.2",
     "numpy<=1.24.3",
     "tensorflow<=2.15.1",
     "tensorboard<=2.15.2",
     "jax[cpu]>=0.4.31",
-    "flax>=0.8.5",
-    "orbax_checkpoint<=0.5.17",
+    "flax>=0.9.0",
+    "orbax_checkpoint>=0.6.1",
     "optax>=0.2.3",
     "chex>=0.1.86",
     "tensorflow_probability>=0.24.0"
