--- a/experiments/docker/Dockerfile
+++ b/experiments/docker/Dockerfile
@@ -8,9 +8,9 @@ RUN git clone https://github.com/nico-bohlinger/RL-X.git
 WORKDIR /RL-X_ws/RL-X
 RUN python3 -m pip install pip -U
 RUN pip3 install -e .[all]
-RUN pip3 install "torch>=2.4.0" --index-url https://download.pytorch.org/whl/cu118 --upgrade
+RUN pip3 install "torch>=2.4.1" --index-url https://download.pytorch.org/whl/cu118 --upgrade
 RUN pip3 uninstall $(pip freeze | grep -i '\-cu12' | cut -d '=' -f 1) -y
-RUN pip3 install -U "jax[cuda12_pip]" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
+RUN pip3 install -U "jax[cuda12]"
 
 COPY entrypoint.sh /entrypoint.sh
 
