Limit gymnasium to the last version before 1.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "absl-py>=2.1.0",
     "ml-collections>=0.1.1",
     "wandb>=0.18.3",
-    "gymnasium[mujoco,classic-control,atari,accept-rom-license,other]>=0.29.1",
+    "gymnasium[mujoco,classic-control,atari,accept-rom-license,other]<=0.29.1",
     "mujoco>=3.2.3",
     "mujoco-mjx>=3.2.3",
     "numpy<=1.24.3",
