--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,12 +14,12 @@ dependencies = [
     "ml-collections>=0.1.1",
     "wandb>=0.18.3",
     "gymnasium[mujoco,classic-control,atari,accept-rom-license,other]<=0.29.1",
-    "mujoco>=3.2.3",
-    "mujoco-mjx>=3.2.3",
+    "mujoco<=3.2.4",
+    "mujoco-mjx<=3.2.4",
     "numpy<=1.24.3",
     "tensorflow<=2.15.1",
     "tensorboard<=2.15.2",
-    "jax[cpu]>=0.4.34",
+    "jax[cpu]>=0.4.35",
     "flax>=0.9.0",
     "orbax_checkpoint>=0.6.4",
     "optax>=0.2.3",
