--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "gymnasium[mujoco,classic-control,atari,accept-rom-license,other]<=0.29.1",
     "mujoco<=3.2.4",
     "mujoco-mjx<=3.2.4",
+    "dm_control<=1.0.21",
     "numpy<=1.24.3",
     "tensorflow<=2.15.1",
     "tensorboard<=2.15.2",
