--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,20 +11,20 @@ license = {text = "MIT License"}
 readme = "README.md"
 dependencies = [
     "absl-py>=2.1.0",
-    "ml-collections>=0.1.1",
-    "wandb>=0.18.3",
+    "ml-collections>=1.0.0",
+    "wandb>=0.19.1",
     "gymnasium[mujoco,classic-control,atari,accept-rom-license,other]<=0.29.1",
     "mujoco<=3.2.4",
     "mujoco-mjx<=3.2.4",
-    "numpy<=1.24.3",
-    "tensorflow<=2.15.1",
-    "tensorboard<=2.15.2",
-    "jax[cpu]>=0.4.35",
-    "flax>=0.9.0",
-    "orbax_checkpoint>=0.6.4",
-    "optax>=0.2.3",
-    "chex>=0.1.87",
-    "tensorflow_probability>=0.24.0"
+    "numpy>=2.0.2",
+    "tensorflow>=2.18.0",
+    "tensorboard>=2.18.0",
+    "jax[cpu]>=0.4.38",
+    "flax>=0.10.2",
+    "orbax_checkpoint>=0.11.0",
+    "optax>=0.2.4",
+    "chex>=0.1.88",
+    "tensorflow_probability>=0.25.0"
 ]
 
 [project.optional-dependencies]
