Clean up ant and ppo full jit

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,13 +12,14 @@ readme = "README.md"
 dependencies = [
     "absl-py>=2.3.1",
     "ml-collections>=1.0.0",
-    "wandb>=0.19.8",
+    "wandb>=0.20.1",
     "gymnasium[mujoco,classic-control,atari,accept-rom-license,other]<=0.29.1",
     "mujoco>=3.3.7",
     "mujoco-mjx>=3.3.7",
+    "dm_control>=1.0.34",
     "numpy>=2.2.6",
-    "tensorflow>=2.19.0",
-    "tensorboard>=2.19.0",
+    "tensorflow>=2.20.0",
+    "tensorboard>=2.20.0",
     "jax[cpu]>=0.8.0",
     "flax>=0.12.0",
     "orbax_checkpoint>=0.11.26",
