--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "ml-collections>=1.0.0",
     "wandb>=0.20.1",
     "gymnasium[mujoco,classic-control,atari,accept-rom-license,other]<=0.29.1",
+    "shimmy>=2.1.0",
     "mujoco>=3.3.7",
     "mujoco-mjx>=3.3.7",
     "dm_control>=1.0.34",
