ignore extra bash scripts in experiments folder

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ dist/
 .DS_Store
 runs/
 wandb/
+experiments/*.sh
+!experiments/slurm_experiment.sh
+!experiments/start_experiment.sh
+!experiments/stop_experiment.sh
