--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "mujoco>=3.3.7",
     "mujoco-mjx>=3.3.7",
     "dm_control>=1.0.34",
+    "playground>=0.0.5",
     "mani_skill-nightly>=2025.10.31.2149",
     "numpy>=2.2.6",
     "tensorflow>=2.20.0",
