--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ readme = "README.md"
 dependencies = [
     "absl-py>=2.3.1",
     "ml-collections>=1.0.0",
-    "wandb>=0.20.1",
+    "wandb>=0.23.0",
     "gymnasium[mujoco,classic-control,atari,accept-rom-license,other]<=0.29.1",
     "shimmy>=0.2.1",
     "mujoco>=3.3.7",
@@ -23,10 +23,10 @@ dependencies = [
     "numpy>=2.2.6",
     "tensorflow>=2.20.0",
     "tensorboard>=2.20.0",
-    "jax[cpu]>=0.8.0",
-    "flax>=0.12.0",
-    "orbax_checkpoint>=0.11.26",
-    "optax>=0.2.4",
+    "jax[cpu]<=0.7.2",
+    "flax<=0.12.0",
+    "orbax_checkpoint>=0.11.28",
+    "optax>=0.2.6",
     "chex>=0.1.91",
     "tensorflow_probability>=0.25.0"
 ]
