Fix docker jax install

--- a/experiments/docker/Dockerfile
+++ b/experiments/docker/Dockerfile
@@ -10,7 +10,7 @@ RUN python3 -m pip install pip -U
 RUN pip3 install -e .[all]
 RUN pip3 install "torch>=2.7.0" --index-url https://download.pytorch.org/whl/cu118 --upgrade
 RUN pip3 uninstall $(pip freeze | grep -i '\-cu12' | cut -d '=' -f 1) -y
-RUN pip3 install -U "jax[cuda12]"
+RUN pip3 install "jax[cuda12]"
 
 COPY entrypoint.sh /entrypoint.sh
 
